// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render wraps children with all peregrine context providers 1`] = `
<WindowSizeContextProvider>
  <ToastContextProvider>
    <i />
  </ToastContextProvider>
</WindowSizeContextProvider>
`;

exports[`render wraps children with single peregrine context provider 1`] = `
<ToastContextProvider>
  <i />
</ToastContextProvider>
`;
